deleted hero all

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/modal-buy-naw.html"></include>
     <main>
-      <include src="./partials/hero.html"></include>
+      <!-- <include src="./partials/hero.html"></include> -->
       <include src="./partials/modal-locations.html"></include>
       <include src="./partials/modal-franchise.html"></include>
       <include src="./partials/products.html"></include>
@@ -70,7 +70,7 @@
     ></script>
     <script src="./script.js" type="module"></script>
     <script src="./shmodal-readmore.js"></script>
-    <script src="./hero.js"></script>
+    <!-- <script src="./hero.js"></script> -->
     <script src="./modal-products-1.js"></script>
     <script src="./modal-products-2.js"></script>
     <script src="./modal-products-3.js"></script>
