--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
     ></script>
     <script src="./script.js" type="module"></script>
     <script src="./shmodal-readmore.js"></script>
-    <!-- <script src="./hero.js"></script> -->
+    <script src="./hero.js"></script>
     <script src="./modal-products-1.js"></script>
     <script src="./modal-products-2.js"></script>
     <script src="./modal-products-3.js"></script>
